<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.LoginFragment">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

   <TextView
       android:id="@+id/textLogo"
       android:text="@string/app_name"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:textColor="@color/primaryColor"
       android:gravity="center_horizontal"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       style="@style/TextView.Logo"
       android:layout_marginTop="100dp"/>
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerForm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/background_auth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textLogo">


        <TextView
            android:id="@+id/textLogin"
            android:text="@string/text_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textAlignment="center"
            style="@style/TextView.Logo"
            android:textColor="@color/darkGreyColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/textLoginDesc"
            android:text="@string/text_login_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textLogin"
            style="@style/TextView.SplashScreen.Description"
            android:textColor="@color/darkGreyColor"/>

        <EditText
            android:id="@+id/inputEmail"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="45dp"
            android:autofillHints="emailAddress"
            android:hint="@string/hint_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textLoginDesc"
            style="@style/EditText.Input"
            android:background="@drawable/background_input"
            android:drawableStart="@drawable/ic_baseline_email_24"/>

        <EditText
            android:id="@+id/inputPassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="45dp"
            android:hint="@string/hint_password"
            android:autofillHints="emailAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputEmail"
            style="@style/EditText.Input"
            android:background="@drawable/background_input"
            android:drawableStart="@drawable/ic_baseline_lock_24"/>

        <TextView
            android:id="@+id/textForgotPassword"
            android:text="@string/text_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputPassword"
            style="@style/TextView.SplashScreen.Description"
            android:textColor="@color/black"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:text="@string/text_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="14dp"
            android:paddingHorizontal="24dp"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/textForgotPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="#ffffff"
            android:background="@drawable/background_button_auth"
            style="@style/TextView.Medium"
            android:textAllCaps="false"/>


    <TextView
        android:id="@+id/textGotoLogin"
        android:text="@string/text_goto_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="90dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        style="@style/TextView.gotoLink"
        android:textColor="@color/darkGreyColor"/>

    <TextView
        android:id="@+id/textGotoLoginLink"
        android:text="@string/text_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintStart_toEndOf="@id/textGotoLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        style="@style/TextView.gotoLink"
        android:textColor="@color/primaryColor"/>






    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>