<?xml version="1.0" encoding="utf-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.layout.auth.forgot.ForgotPasswordFragment"
        android:background="@color/backgroundColor">

        <TextView
            android:id="@+id/textLogo"
            android:text="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryColor"
            android:gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/TextView.Logo"
            android:layout_marginTop="100dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/containerForm"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/background_auth"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textLogo">

            <TextView
                android:id="@+id/textForgotPassword"
                android:text="@string/text_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textAlignment="center"
                style="@style/TextView.Logo"
                android:textColor="@color/darkGreyColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/textRegisterDesc"
                android:text="@string/text_forgot_password_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="60dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textForgotPassword"
                style="@style/TextView.SplashScreen.Description"
                android:textColor="@color/darkGreyColor"/>

            <EditText
                android:id="@+id/inputEmail"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="45dp"
                android:autofillHints="emailAddress"
                android:hint="@string/hint_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textRegisterDesc"
                style="@style/EditText.Input"
                android:background="@drawable/background_input"
                android:drawableStart="@drawable/ic_baseline_email_24"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnConfirm"
                android:text="@string/text_confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingVertical="14dp"
                android:paddingHorizontal="24dp"
                android:layout_margin="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textColor="@color/white"
                android:background="@drawable/background_button_auth"
                style="@style/TextView.Medium"
                android:textAllCaps="false"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

