<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.profile.PersonalInformationFragment"
    android:background="@color/backgroundColor">

    <TextView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/ic_baseline_arrow_back_24"
        android:layout_marginHorizontal="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textBtnPersonalInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="15dp"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:text="@string/textBtnPersonalInformation"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/btnBack"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textPersonalInformationDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textSize="16sp"
        android:text="@string/personal_information_desc"
        android:textColor="@color/darkGreyColor"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnBack"/>

    <LinearLayout
        android:id="@+id/cardFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/textPersonalInformationDesc"
        android:background="@drawable/backgound_topup"
        android:layout_margin="15dp"
        android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textFirstName"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/darkGreyColor"/>
            <TextView
                android:id="@+id/textFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hatta"
                android:textStyle="bold"
                android:layout_marginVertical="5dp"
                android:textSize="20sp"
                android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/cardLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/cardFirstName"
        android:background="@drawable/backgound_topup"
        android:layout_margin="15dp"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textLastName"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/darkGreyColor"/>
        <TextView
            android:id="@+id/textLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Febriansyah"
            android:textStyle="bold"
            android:layout_marginVertical="5dp"
            android:textSize="20sp"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/cardVerifiedEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/cardLastName"
        android:background="@drawable/backgound_topup"
        android:layout_margin="15dp"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textVerifiedEmail"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/darkGreyColor"/>
        <TextView
            android:id="@+id/textVerifiedEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="hatta@gmail.com"
            android:textStyle="bold"
            android:layout_marginVertical="5dp"
            android:textSize="20sp"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/cardPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/cardVerifiedEmail"
        android:background="@drawable/backgound_topup"
        android:layout_margin="15dp"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textNumberPhone"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/darkGreyColor"/>
        <TextView
            android:id="@+id/textPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+62 823-1234-1234"
            android:textStyle="bold"
            android:layout_marginVertical="5dp"
            android:textSize="20sp"
            android:textColor="@color/black"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>